# multi-pattern-string-matching

./: .gitignore  README.md  README.txt  aho_corasick.py  commentz_walter.py  corpus.py  main.py  pyproject.toml  rabin_karp.py  requirements.txt  synonyms.py  test_algorithms.py  test_data.py  trie.py
